src/styles/Home.module.css
/* ... */
.sermonSidebar .sermonLink:hover {
  color: #7fc540;
}

.sermonPageContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 30px;
  width: 100%;
  max-width: 2200px;
  margin: 0 auto;
  padding: 0 20px;
  box-sizing: border-box;
}

/* Sermon content */
.sermonContent {
  flex: 3;
  width: 100%;
}

/* Container for the collapsible text */
.week_day_text {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.1s ease-out;
  width: 100%;
  text-align: center;
}

/* Expanded state */
.week_day_text.expanded {
  max-height: 1000px; /* Increased to accommodate long text */
  overflow: visible; /* Ensure no clipping */
}

.updated_date {
  display: block; /* რომ ტექსტის ქვემოთ, ახალ ხაზზე გამოჩნდეს */
  margin-top: 8px; /* დაშორება ზედა ტექსტიდან */
  font-size: 0.8rem; /* მცირე ზომის შრიფტი */
  color: #888888; /* ნაცრისფერი */
  font-style: italic; /* დახრილი (Italic) */
}

/* Responsive styles */
@media (max-width: 700px) {
  .week_calendar_inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }

  .week_calendar {
    margin-bottom: 40px; /* Adds spacing below week_calendar on mobile */
  }

  .maturityOrnament {
    width: 250px !important; /* Adjust this value as needed for small screens; use !important to override if necessary */
  }

  .leftColumn,
  .rightColumn,
  .bottomRow,
  .iveria_image {
    order: unset;
    width: 100%;
    max-width: 300px;
    margin: 0;
    padding: 10px;
  }

  .leftColumn,
  .rightColumn {
    display: contents;
  }

  .week_day_item[data-day-order="1"] {
    order: 1;
  }
  .week_day_item[data-day-order="2"] {
    order: 2;
  }
  .week_day_item[data-day-order="3"] {
    order: 3;
  }
  .iveria_image[data-day-order="4"] {
    order: 4;
  }
  .week_day_item[data-day-order="5"] {
    order: 5;
  }
  .week_day_item[data-day-order="6"] {
    order: 6;
  }
  .week_day_item[data-day-order="7"] {
    order: 7;
  }
  .bottomRow[data-day-order="8"] {
    order: 8;
  }

  .week_day_item[data-day-order="1"] {
    order: 1; /* Monday */
  }

  .week_day_item[data-day-order="2"] {
    order: 2; /* Tuesday */
  }

  .week_day_item[data-day-order="3"] {
    order: 3; /* Wednesday */
  }

  .iveria_image[data-day-order="4"] {
    order: 4; /* Image */
  }

  .week_day_item[data-day-order="5"] {
    order: 5; /* Thursday */
  }

  .week_day_item[data-day-order="6"] {
    order: 6; /* Friday */
  }

  .week_day_item[data-day-order="7"] {
    order: 7; /* Saturday */
  }

  .bottomRow[data-day-order="8"] {
    order: 8; /* Sunday */
  }

  .bottomRow {
    width: 150px;
  }

  .bottomRow .week_day_item {
    max-width: 150px;
  }

  .bottomRow .week_day_text {
    max-width: 150px;
  }

  .bottomRow .week_day_text.expanded {
    max-height: 2000px;
  }

  .iveria_image img {
    max-width: 150px;
  }

  .headerTitle {
    content: "ივერიის ღვთისმშობლის ლავრა";
    width: auto;
    font-family: "Cinzel", serif;
    font-size: 28px;
    font-weight: 700;
    color: #333;
    text-align: center;
    padding: 10px;
    letter-spacing: 1px;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
  }

  .week_calendar_vineyard {
    opacity: 0;
  }

  .auditorium_vineyard {
    width: 420px;
    height: 420px;
    top: -65px;
    right: -160px;
  }

  .leftAngel,
  .rightAngel {
    top: 110px;
    width: 200px;
    animation: levitate 6.5s ease-in-out infinite;
  }

  .rightAngel {
    animation-delay: 0.5s;
  }

  .dot {
    width: 8px;
    height: 8px;
  }

  .contact_value {
    font-size: 18px;
  }

  .sub_desc {
    flex-direction: column;
  }

  .sub_desc a {
    padding: 15px;
  }

  .contentWrapper {
    padding-bottom: 60px;
    min-height: 100%;
  }

  .contact_container {
    margin-bottom: 30px;
  }

  .auditorium_image {
    max-width: 100%;
    width: 100%;
  }

  .headerTitle {
    font-size: 24px;
    width: 80%;
  }

  .week_calendar {
    width: 100%;
    max-width: 100%;
    padding: 10px;
  }

  .week_day {
    max-width: 100%;
    padding: 10px;
  }

  .week_day h1 {
    font-size: 24px;
    margin-bottom: 8px;
  }

  .week_day h3 {
    font-size: 24px;
  }

  .week_day p {
    font-size: 16px;
  }

  .auditorium {
    flex-direction: column;
    padding: 30px 20px;
    margin: 50px auto;
  }

  .auditorium_desc {
    order: 2;
    padding: 10px;
  }

  .auditorium h1 {
    font-size: 28px;
  }

  .auditorium p {
    font-size: 16px;
  }

  .sub_contact_container {
    flex-direction: column;
    width: 90%;
  }

  .sub_contact_img {
    width: 100%;
    height: 250px;
  }

  .sub_contact_desc {
    width: 100%;
    padding: 30px;
  }

  .btn_maps,
  .btn_facebook {
    width: 100%;
  }

  .daily_info {
    padding: 100px 20px;
    font-size: 20px;
  }

  .daily_text {
    font-size: 26px;
  }

  .headerImg {
    width: 95%;
    margin: 30px auto;
  }

  .slideshow {
    height: 500px;
  }

  .sermonBlock {
    padding: 20px;
  }

  .sermonBlock h1 {
    font-size: 28px;
  }

  .sermonBlock p {
    font-size: 16px;
  }

  .ornamentImage {
    width: 120px;
  }
}

@media (max-width: 900px) and (orientation: landscape) {
  .week_calendar {
    width: 100%;
    padding: 10px;
  }

  .week_calendar_vineyard {
    top: -40px;
    left: -30px;
    width: 230px;
    height: 230px;
  }

  .week_calendar_inner {
    grid-template-areas:
      "left"
      "center"
      "right"
      "bottom";
    grid-template-columns: 1fr;
    grid-template-rows: auto auto auto auto;
  }

  .headerTitle {
    content: "ივერიის ღვთისმშობლის ლავრა";
    font-size: 24px;
  }

  .leftAngel,
  .rightAngel {
    top: 30px;
    width: 280px;
    animation: levitate 6.5s ease-in-out infinite;
  }

  .rightAngel {
    animation-delay: 0.5s;
  }

  .slideshow {
    height: 100vh;
  }
}
/* ... */

